print stdOut